# tuhabi_test

databases/: README.txt
databases/ctas/: 1. create_table.sql  2. insert_data.sql
databases/deliver/: 1. generate_resultset.sql
databases/resultset/: traffic_resultset.csv
programming/foot_score/: README.md  pyproject.toml
programming/foot_score/foot_score/: score_util.py
programming/foot_score/tests/: resources.py  test_score_calculator.py
