[tool.poetry]
name = "foot-score"
version = "0.1.0"
description = ""
authors = ["zquirozt <zuleima.quirozt@gmail.com>"]
readme = "README.md"
packages = [{include = "foot_score"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
